--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -43,7 +43,6 @@
     <string name="menu_tutorial">Zelfstudie</string>
     <string name="menu_exclude">Sluit uit</string>
     <string name="menu_close">Sluiten</string>
-    <string name="menu_category">Geldt voor de gehele categorie</string>
     <string name="msg_abort">Afbreken</string>
     <string name="msg_aborted">Afgebroken</string>
     <string name="msg_new">Nieuw</string>
@@ -112,9 +111,10 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="title_supdated">Op datum bijgewerkt</string>
     <string name="title_smodified">Op datum gewijzigd (XPrivacy)</string>
     <string name="title_sinvert">Omgekeerde sorteervolgorde</string>
+    <string name="title_applycat">Pas toe op gehele categorie</string>
+    <string name="title_once">Één keer voor %1$s seconden</string>
     <string name="title_allow">Toestaan</string>
     <string name="title_deny">Blokkeren</string>
-    <string name="title_denyonce">1x Blokkeren</string>
     <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breedtegraad</string>
     <string name="settings_lon">Lengtegraad</string>
