--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -43,7 +43,6 @@
     <string name="menu_tutorial">Samouczek</string>
     <string name="menu_exclude">Wyklucz</string>
     <string name="menu_close">Zamknij</string>
-    <string name="menu_category">Act on the entire category</string>
     <string name="msg_abort">Przerywanie</string>
     <string name="msg_aborted">Przerwano</string>
     <string name="msg_new">Nowa aplikacja</string>
@@ -112,9 +111,10 @@
     <string name="title_supdated">By date updated</string>
     <string name="title_smodified">By date modified (XPrivacy)</string>
     <string name="title_sinvert">Invert sort order</string>
+    <string name="title_applycat">Apply to entire category</string>
+    <string name="title_once">Once for %1$s seconds</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
-    <string name="title_denyonce">Deny once</string>
     <string name="settings_serial">Numer seryjny</string>
     <string name="settings_lat">Szerokość geograficzna</string>
     <string name="settings_lon">Długość geograficzna</string>
