--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -43,7 +43,6 @@
     <string name="menu_tutorial">Príručka</string>
     <string name="menu_exclude">Vylúčiť</string>
     <string name="menu_close">Zavrieť</string>
-    <string name="menu_category">Act on the entire category</string>
     <string name="msg_abort">Rušenie</string>
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Nové</string>
@@ -112,9 +111,10 @@ avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zaria
     <string name="title_supdated">Podľa dátumu aktulizácie</string>
     <string name="title_smodified">Podľa dátumu zmeny (XPrivacy)</string>
     <string name="title_sinvert">Obrátiť poradenie zoradenia</string>
+    <string name="title_applycat">Apply to entire category</string>
+    <string name="title_once">Once for %1$s seconds</string>
     <string name="title_allow">Povoliť</string>
     <string name="title_deny">Odmietnuť</string>
-    <string name="title_denyonce">Odmietnuť raz</string>
     <string name="settings_serial">Sériové číslo</string>
     <string name="settings_lat">Zemepisná šírka</string>
     <string name="settings_lon">Zemepisná dĺžka</string>
