--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -43,7 +43,6 @@
     <string name="menu_tutorial">Hướng dẫn</string>
     <string name="menu_exclude">Exclude</string>
     <string name="menu_close">Close</string>
-    <string name="menu_category">Act on the entire category</string>
     <string name="msg_abort">Aborting</string>
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Mới</string>
@@ -111,9 +110,10 @@
     <string name="title_supdated">By date updated</string>
     <string name="title_smodified">By date modified (XPrivacy)</string>
     <string name="title_sinvert">Invert sort order</string>
+    <string name="title_applycat">Apply to entire category</string>
+    <string name="title_once">Once for %1$s seconds</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
-    <string name="title_denyonce">Deny once</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Vĩ độ</string>
     <string name="settings_lon">Kinh độ</string>
