--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_notxposed" formatted="false">Xposedフレームワークバージョン %d+ がインストールされていません</string>
     <string name="app_notenabled">XPrivacyがXposedインストーラで有効になっていません</string>
     <string name="app_wrongandroid">Androidバージョン 4.0以降でのみを動作します</string>
-    <string name="app_incompatible" formatted="false">XPrivacy is incompatible with %s</string>
+    <string name="app_incompatible" formatted="false">XPrivacyは%sが非対応です</string>
     <string name="app_version" formatted="false">XPrivacy バージョン: %s (%d)</string>
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposedフレームワークバージョン: %d</string>
@@ -21,53 +21,53 @@
     <string name="menu_pro">プロバージョンを購入</string>
     <string name="menu_about">アプリの情報</string>
     <string name="menu_help">ヘルプ</string>
-    <string name="menu_select_all">Select all</string>
-    <string name="menu_sort">Sort</string>
-    <string name="menu_filter">Filter</string>
+    <string name="menu_select_all">全てを選択する</string>
+    <string name="menu_sort">ソート</string>
+    <string name="menu_filter">フィルター</string>
     <string name="menu_all">全て</string>
     <string name="menu_restriction_all">制限の身に切り替え</string>
-    <string name="menu_clear_all">Clear all</string>
-    <string name="menu_restrict_all">Restrict all</string>
-    <string name="menu_clear_usage">Clear</string>
-    <string name="menu_clear_db">Clear all data</string>
+    <string name="menu_clear_all">全部をクリアする</string>
+    <string name="menu_restrict_all">全部を制限する</string>
+    <string name="menu_clear_usage">クリア</string>
+    <string name="menu_clear_db">初期化設定</string>
     <string name="menu_usage_all">フィルタ</string>
     <string name="menu_apply">テンプレを適用</string>
     <string name="menu_clear">クリア</string>
     <string name="menu_app_launch">アプリを起動</string>
     <string name="menu_app_settings">設定</string>
     <string name="menu_app_store">グーグレプレイストア</string>
-    <string name="menu_app_kill">Kill</string>
+    <string name="menu_app_kill">強制終了</string>
     <string name="menu_accounts">許可するアカウントを選択</string>
     <string name="menu_applications">許可するアプリを選択</string>
     <string name="menu_contacts">許可する電話の連絡先を選択</string>
-    <string name="menu_tutorial">Tutorial</string>
-    <string name="menu_exclude">Exclude</string>
-    <string name="menu_close">Close</string>
-    <string name="msg_abort">Aborting</string>
-    <string name="msg_aborted">Aborted</string>
+    <string name="menu_tutorial">チュートリアル</string>
+    <string name="menu_exclude">除外する</string>
+    <string name="menu_close">閉じる</string>
+    <string name="msg_abort">中断</string>
+    <string name="msg_aborted">中断されました</string>
     <string name="msg_new">新規</string>
     <string name="msg_update">更新されました</string>
     <string name="msg_licensed" formatted="false">ライセンス先: %s</string>
     <string name="msg_loading">読み込み中</string>
-    <string name="msg_applying">Applying</string>
-    <string name="msg_applied">Template applied</string>
+    <string name="msg_applying">適用中</string>
+    <string name="msg_applied">テンプレートを適用しました</string>
     <string name="msg_saved_to" formatted="false">%sに保存されました</string>
     <string name="msg_no_restrictions">制限などは見つかりませんでした</string>
     <string name="msg_sure">続行しますか</string>
-    <string name="msg_select">Please select some applications</string>
-    <string name="msg_limit">Please select fewer than %d applications</string>
+    <string name="msg_select">アプリケーションを選択して下さい</string>
+    <string name="msg_limit">%d applicationswo</string>
     <string name="msg_done">終了</string>
     <string name="msg_reboot">再起動して下さい</string>
     <string name="msg_random_now">ランダム化</string>
     <string name="msg_random_access">アプリにアクセスされたとき、バリューをランダム化する</string>
-    <string name="msg_random_boot">端末を起動時にランダム化する</string>
-    <string name="msg_restart">Application restart required</string>
-    <string name="msg_register">Please register your device</string>
-    <string name="msg_registered">Check your e-mail to activate your device</string>
-    <string name="msg_service">Update service running</string>
-    <string name="msg_migrating" formatted="false">Migrating %s</string>
-    <string name="msg_randomizing" formatted="false">Randomizing %s</string>
-    <string name="msg_upgrading" formatted="false">Upgrading %s</string>
+    <string name="msg_random_boot">端末を起動時にバリューをランダム化する</string>
+    <string name="msg_restart">アプリケーション再起動が必要です</string>
+    <string name="msg_register">デバイスを登録して下さい</string>
+    <string name="msg_registered">デバイスをアクティベーションするためにメールをご覧ください</string>
+    <string name="msg_service">アップデートサービス実行中</string>
+    <string name="msg_migrating" formatted="false">移行中 %s</string>
+    <string name="msg_randomizing" formatted="false">ランダム化しています %s</string>
+    <string name="msg_upgrading" formatted="false">アップグレード中 %s</string>
     <string name="msg_support_info">An internal check failed, do you want to send the support info?</string>
     <string name="msg_ondemand" formatted="false">%1$s is trying to use %3$s in the %2$s category</string>
     <string name="msg_restrictedby">Restricted by XPrivacy</string>
@@ -105,16 +105,16 @@
     <string name="title_fuser">ユーザーアプリを表示</string>
     <string name="title_fsystem">システムアプリを表示</string>
     <string name="title_fnot">無視</string>
-    <string name="title_sname">By name</string>
-    <string name="title_suid">By uid</string>
+    <string name="title_sname">タイトルで</string>
+    <string name="title_suid">uidで</string>
     <string name="title_sinstalled">By date installed</string>
     <string name="title_supdated">By date updated</string>
     <string name="title_smodified">By date modified (XPrivacy)</string>
     <string name="title_sinvert">Invert sort order</string>
     <string name="title_applycat">Apply to entire category</string>
     <string name="title_once">Once for %1$s seconds</string>
-    <string name="title_allow">Allow</string>
-    <string name="title_deny">Deny</string>
+    <string name="title_allow">許可</string>
+    <string name="title_deny">拒否</string>
     <string name="settings_serial">シリアル番号</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">経度</string>
@@ -137,7 +137,7 @@
     <string name="settings_dangerous">危険な可能を制限する</string>
     <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="settings_experimental">Experimental functions (requires restart)</string>
-    <string name="settings_https">Use secure connections</string>
+    <string name="settings_https">セキュリティーで保護された接続を使用する</string>
     <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
     <string name="settings_usagedata">Show application usage data (requires restart)</string>
     <string name="help_longpress">Long press name to select</string>
@@ -149,10 +149,10 @@
     <string name="help_frozen">は無効になっています</string>
     <string name="help_dangerous">はプライバシーに危険です</string>
     <string name="help_half">部分的に制限されました</string>
-    <string name="help_attention">restrictions need attention</string>
-    <string name="help_restricted">restrictions are changed</string>
-    <string name="help_shared">restrictions are submitted</string>
-    <string name="tutorial_mainheader">Select the category to restrict</string>
+    <string name="help_attention">制限が注意</string>
+    <string name="help_restricted">制限が更新しました</string>
+    <string name="help_shared">制限が送信しました</string>
+    <string name="tutorial_mainheader">制限したいカテゴリーを制限する</string
     <string name="tutorial_mainlist">Tap a check box to restrict the selected category for an app\n
 \nApps will be fed empty or fake data for restricted categories\n
 \nTap the app icon for detailed restrictions and settings</string>
