--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -141,6 +141,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="settings_syscomponents">Restreindre composants système (Android) (redémarrage requis)</string>
     <string name="settings_usagedata">Montrer les données d\'usage pour chaque application (redémarrage requis)</string>
     <string name="help_longpress">Long press name to select</string>
+    <string name="help_ondemand">restrictions will be asked</string>
     <string name="help_application">Application</string>
     <string name="help_internet">a les permissions Internet</string>
     <string name="help_granted">a les permissions Android</string>
