--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -141,6 +141,7 @@
     <string name="settings_syscomponents">システムのコンポーネントにアクセスを制限する （アンドロイド）（再起動が必要となります）</string>
     <string name="settings_usagedata">使用状況データを登録する（再起動が必要）</string>
     <string name="help_longpress">タイトルを押してれば、選択ができます</string>
+    <string name="help_ondemand">restrictions will be asked</string>
     <string name="help_application">アプリ</string>
     <string name="help_internet">はインターネット権限を持っています</string>
     <string name="help_granted">はアンドロイドの権限を持っています</string>
