--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -141,6 +141,7 @@
     <string name="settings_syscomponents">Ogranicz komponenty systemowe (Android) (wymaga restartu)</string>
     <string name="settings_usagedata">Pokaż użycie danych przez aplikacje (wymaga restartu)</string>
     <string name="help_longpress">Przytrzymaj na nazwie aby wybrać</string>
+    <string name="help_ondemand">restrictions will be asked</string>
     <string name="help_application">Aplikacja</string>
     <string name="help_internet">ma dostęp do internetu</string>
     <string name="help_granted">ma dostęp do uprawnień Androida</string>
