--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -141,6 +141,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
     <string name="settings_usagedata">Show application usage data (requires restart)</string>
     <string name="help_longpress">Long press name to select</string>
+    <string name="help_ondemand">restrictions will be asked</string>
     <string name="help_application">Aplicação</string>
     <string name="help_internet">Tem permissão da internet</string>
     <string name="help_granted">Tem permissão do Android</string>
