--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -115,6 +115,7 @@ avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zaria
     <string name="title_once">Once for %1$s seconds</string>
     <string name="title_allow">Povoliť</string>
     <string name="title_deny">Odmietnuť</string>
+    <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
     <string name="settings_serial">Sériové číslo</string>
     <string name="settings_lat">Zemepisná šírka</string>
     <string name="settings_lon">Zemepisná dĺžka</string>
