--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -115,6 +115,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="title_once">Once for %1$s seconds</string>
     <string name="title_allow">Permettre</string>
     <string name="title_deny">Bloquer</string>
+    <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
     <string name="settings_serial">N° de série</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
