--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -115,6 +115,7 @@
     <string name="title_once">Once for %1$s seconds</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
+    <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
     <string name="settings_serial">क्रमांक#</string>
     <string name="settings_lat">अक्षांश</string>
     <string name="settings_lon">रेखांश</string>
