--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -115,6 +115,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="title_once">Once for %1$s seconds</string>
     <string name="title_allow">Leisti</string>
     <string name="title_deny">Drausti</string>
+    <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Platuma</string>
     <string name="settings_lon">Ilguma</string>
