--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -115,6 +115,7 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="title_once">Één keer voor %1$s seconden</string>
     <string name="title_allow">Toestaan</string>
     <string name="title_deny">Blokkeren</string>
+    <string name="title_pleasesubmit">Stuur a.u.b. uw beperkingen om anderen te helpen</string>
     <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breedtegraad</string>
     <string name="settings_lon">Lengtegraad</string>
