--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -115,6 +115,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="title_once">Once for %1$s seconds</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
+    <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Ширина</string>
     <string name="settings_lon">Дужина</string>
