--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -115,6 +115,7 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="title_once">Once for %1$s seconds</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
+    <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
