--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -111,15 +111,15 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="title_supdated">Pagal atnaujinimo datą</string>
     <string name="title_smodified">Pagal modifikavimo datą (XPrivacy)</string>
     <string name="title_sinvert">Atvirkštinė rūšiavimo tvarka</string>
-    <string name="title_applycat">Apply to entire category</string>
-    <string name="title_once">Once for %1$s seconds</string>
+    <string name="title_applycat">Taikyti esamoje kategorijoje</string>
+    <string name="title_once">Vieną kartą %1$s sekundžių</string>
     <string name="title_allow">Leisti</string>
     <string name="title_deny">Drausti</string>
-    <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
+    <string name="title_pleasesubmit">Prašome pateikti savo apribojimus padėti kitiems</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Platuma</string>
     <string name="settings_lon">Ilguma</string>
-    <string name="settings_alt">Altitude</string>
+    <string name="settings_alt">Aukštis</string>
     <string name="settings_mac">MAC adresas</string>
     <string name="settings_ip">IP addresas</string>
     <string name="settings_phone">Telefono nr.</string>
@@ -141,8 +141,8 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_https">Naudojamas saugus ryšys</string>
     <string name="settings_syscomponents">Riboti sistemos komponentus (Android) (reikia perkrauti)</string>
     <string name="settings_usagedata">Rodyti programos duomenų naudojimą (reikia perkrauti)</string>
-    <string name="help_longpress">Long press name to select</string>
-    <string name="help_ondemand">restrictions will be asked</string>
+    <string name="help_longpress">Ilgas paspaudimas vardui pasirinkti</string>
+    <string name="help_ondemand">apribojimai bus paprašyti</string>
     <string name="help_application">Programa</string>
     <string name="help_internet">Interneto leidimai</string>
     <string name="help_granted">Android leidimai</string>
